[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "numpy>=2.2.1",
    "openai>=1.58.1",
    "opencv-python>=4.10.0.84",
    "pillow>=11.1.0",
    "pydantic>=2.10.4",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "jupyterlab>=4.3.4",
    "notebook>=7.3.2",
    "pip>=24.3.1",
]
